wip: исправлена проблема совместимости версий Java